--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
       android:theme="@style/AppTheme">
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="91393eb8b341e9d9d1b9010afc95546d" />
+            android:value="${AMAP_KEY}" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
